<resources>
    <string name="app_name">Napchat</string>
    <string name="app_full_name">Napchat Alarms</string>
    <string name="company_name">by Brandon Best</string>
    <string name="version_number">v0.1.1.4-alpha</string>
    <string name="version_code">6</string>
    <string name="license">Licenses</string>
    <string name="support_email">bbest.dev@gmail.com</string>
    <string name="channel_name">NAPCHATALARMCHANNEL</string>
    <string name="channel_description">Notification channel for Napchat Alarms</string>
    <string name="server_client_id">747826833878-mrm8lvkjkuunagndt8g4mdftvbudp3bt.apps.googleusercontent.com</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="weekends">Weekends</string>
    <string name="weekdays">Weekdays</string>
    <string name="everyday">Everyday</string>
    <string name="sunday_short">Sun</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tues</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thurs</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="one_min">1 min</string>
    <string name="five_min">5 min</string>
    <string name="ten_min">10 min</string>
    <string name="fifteen_min">15 min</string>
    <string name="twenty_min">20 min</string>
    <string name="twenty_five_min">25 min</string>
    <string name="thirty_min">30 min</string>
    <string name="logo_descrip">Napchat Pillow Logo</string>
    <string name="facts">Facts</string>
    <string name="Options">Options</string>
    <string name="Friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="Alerts">Alerts</string>
    <string name="Forgot_Pass">Forgot Password?</string>
    <string name="Delete_Account">Delete Account</string>
    <string name="change_name">Change Name</string>
    <string name="submit_fact">Submit Fact</string>
    <string name="support">Support</string>
    <string name="dnd_permission_title">Allow Do Not Disturb Override</string>
    <string name="login">Login</string>
    <string name="credits">Credits</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="add_friend_title">Add Friend</string>
    <string name="locomotive">Locomotive</string>
    <string name="buzzsaw">Buzzsaw</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="tiptoe">Tip-toe</string>
    <string name="off">Off</string>
    <string name="bamboo">Bamboo Forest</string>
    <string name="steampunk">Steam-punk</string>
    <string name="alleycat">Alley Cat</string>
    <string-array name="snooze_array">
        <item>1 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
        <item>25 min</item>
        <item>30 min</item>
    </string-array>
    <string-array name="vibrate_patterns">
        <item>Off</item>
        <item>Locomotive</item>
        <item>Buzzsaw</item>
        <item>Heartbeat</item>
        <item>Tip-toe</item>
    </string-array>
    <string name="dyk">Did you know?</string>
    <string name="default_string">Default</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="already_have_acct">Already have an account?</string>
    <string name="ringtone_label">Ringtone: %s</string>
    <string name="vibrate_label">Vibrate: %s</string>
    <string name="repeat_label">Repeat: %s</string>
    <string name="snooze_label">Snooze: %s</string>
    <string name="contacts_label">Contacts: %s</string>
    <string name="edit">Edit</string>
    <string name="device">Device</string>
    <string name="music">Music</string>
    <string name="dyk_yes">Yes</string>
    <string name="dyk_no">No</string>
    <string name="sign_up">Sign Up</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="repeat">Repeat</string>
    <string name="attach_notification">Attach Notification</string>
    <string name="Cancel">Cancel</string>
    <string name="Send">Send</string>
    <string name="vibrate">Vibrate</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="okay">OK</string>
    <string name="ringtone">Ringtone</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="create">Create</string>
    <string name="confirm">Confirm</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="okay_got_it">Ok, got it!</string>
    <string name="minute_abbreviation">min</string>
    <string name="add_friend_btn_label">Add Friend+</string>
    <string name="Requests">Requests</string>
    <string name="Remove">Remove</string>
    <string name="faq">FAQ</string>
    <string name="upgrade_support">Upgrade</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="verify">Verify Email</string>
    <string name="verified">Verified</string>
    <string name="reset_password">Reset Password</string>
    <string name="about">About</string>
    <string name="rate">Rate App</string>
    <string name="open_src">Open Source Libraries</string>
    <string name="feedback_bug">Submit Feedback/Problems</string>
    <string name="share">Share App</string>
    <string name="invite">Invite</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="whats_new">What\'s New?</string>
    <string name="tutorial">Tutorial</string>
    <string name="descrip">Description</string>
    <string name="citation">Citation</string>
    <string name="blanktime">00:00 AM</string>
    <string name="default_time">00:00</string>
    <string name="default_meridian">AM</string>
    <string name="email_hint">email</string>
    <string name="pass_hint">password</string>
    <string name="jane_doe_email_com">janedoe@email.com</string>
    <string name="new_username">username123</string>
    <string name="link_hint">www.example.com</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_first_name">Invalid Username</string>
    <string name="invalid_pwd">Invalid Password</string>
    <string name="email_sent">Email sent!</string>
    <string name="warning">Warning</string>
    <string name="logout_warning">Logging out will deactivate all current active alarms!</string>
    <string name="delete_account_warning">Are you sure you want to proceed?</string>
    <string name="sent">Sent</string>
    <string name="link_msg">Academic research papers, journals, and articles only. Preferably peer reviewed.</string>
    <string name="forgot_password_error_message">*Email not associated with an account.</string>
    <string name="alarm_created">Alarm Created!</string>
    <string name="fact_yes_msg">You\'re so smart!</string>
    <string name="fact_no_msg">Well now you know!</string>
    <string name="forgot_pass_message">Please enter your email to send a password reset email.</string>
    <string name="sign_up_email_msg">Please enter an email, username (min. 6 chars), and password (min. 8 chars)</string>
    <string name="dnd_permission_text">Please allow Napchat to override your Do Not Disturb state to ensure our alarms will sound through Alarm Only and Total Silence modes.</string>
    <string name="signup_pwd_msg">Enter a password.(min 8 characters)</string>
    <string name="Reauthenticate">Please re-authenticate to delete account.</string>
    <string name="in_progress_message">We\'re working on it!</string>
    <string name="conn_error">Connection Error!</string>
    <string name="login_error_message">Login Failed!</string>
    <string name="system_error_message">System Error!</string>
    <string name="remove_friend_message">Are you sure you want to remove this friend?</string>
    <string name="add_friend_message">Enter username to send friend request.</string>
    <string name="add_friend_error_text">That user does not exist!</string>
    <string name="firebase_auth">Firebase Authentication</string>
    <string name="firebase_rldb">Firebase Realtime Database</string>
    <string name="firebase_crashlytics">Firebase Crashlytics</string>
    <string name="firebase_google_analytics">Firebase Google Analytics</string>
    <string name="firebase_app_index">Firebase App Indexing</string>
    <string name="firebase_remote_config">Firebase Remote Config</string>
    <string name="firebase_invites">Firebase Invites</string>
    <string name="google_inc">Google Inc.</string>
    <string name="swipemenulistview">SwipeMenuListView</string>
    <string name="baoyongzhang">baoyongzhang</string>
    <string name="facebook_application_id" translatable="false">827964794033926</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb827964794033926</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb827964794033926</string>
    <string name="left_chev">left chevron</string>
    <string name="right_chev">right chevron</string>
    <string name="onboarding_dot">onboarding dot</string>
    <string-array name="fact_citations">
        <item>Takuro Endo, Corinne Roth, Hans-Peter Landolt, Esther Werth, Daniel Aeschbach, Peter Achermann, and Alexander A. Borbély American Journal of Physiology-Regulatory, Integrative and Comparative Physiology 1998 274:4, R1186-R1194</item>
        <item>Maude Bouchard, Caroline Drapeau, Julie Carrier. The effects of stress on sleep in older adults. Department of Psychology, Université de Montréal, Montreal, QC, Canada.</item>
        <item>Maude Bouchard, Caroline Drapeau, Julie Carrier. Challenges of the sleep wake cycle. Department of Psychology, Université de Montréal, Montreal, QC, Canada.</item>
        <item>Jean–Philippe Chaput, Suzy L. Wong and Isabelle Michaud.Duration and quality of sleep among Canadians aged 18 to 79.(Statistics Canada, Catalogue Catalogue no. 82–003-X) September 20th 2017.</item>
        <item>Chiara M. Portas, Karsten Krakow, Phillip Allen, Oliver Josephs, Jorge L. Armony, Chris D. Frith, Auditory Processing across the Sleep–Wake Cycle: Simultaneous EEG and fMRI Monitoring in Humans, Neuron, Volume 28, Issue 3, 2000, Pages 991–999, ISSN 0896–6273</item>
    </string-array>
</resources>