<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_facts"
        android:icon="@drawable/ic_books"
        android:title="@string/facts" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_house"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_settings"
        android:title="@string/Friends"
        />

    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/ic_settings"
        android:title="@string/Alerts"
        />

    <item
        android:id="@+id/navigation_options"
        android:icon="@drawable/ic_settings"
        android:title="@string/Options" />

</menu>
