<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/locomotive_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locomotive" />

    <Button
        android:id="@+id/buzzsaw_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buzzsaw" />

    <Button
        android:id="@+id/heartbeat_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heartbeat" />

    <Button
        android:id="@+id/tiptoe_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tiptoe" />

    <Button
        android:id="@+id/no_vibrate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/off" />
</LinearLayout>