<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top|center_vertical"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/delete_account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/Delete_Account"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/delete_account_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reauthenticate" />

    <EditText
        android:id="@+id/delete_account_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/delete_account_pass_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/del_acct_err_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/invalid_credentials"
        android:textColor="@color/unverified_red"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_account_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/round_blue_popup_btn"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/confirm"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete_account_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/round_neutral_popup_btn"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/Cancel"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>