<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dnd_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:text="@string/dnd_permission_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dnd_permission_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dnd_title"
        android:layout_below="@+id/dnd_title"
        android:layout_marginTop="18dp"
        android:text="@string/dnd_permission_text" />

    <Button
        android:id="@+id/allow_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dnd_permission_text"
        android:layout_below="@+id/dnd_permission_text"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/allow" />

    <Button
        android:id="@+id/deny_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/allow_btn"
        android:layout_alignBottom="@+id/allow_btn"
        android:layout_alignEnd="@+id/dnd_title"
        android:text="@string/deny" />
</RelativeLayout>