<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.napchatalarms.napchatalarmsandroid.activities.CustomRingtoneActivity">

    <Button
        android:id="@+id/bamboo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="52dp"
        android:text="@string/bamboo" />

    <Button
        android:id="@+id/steampunk_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bamboo_btn"
        android:layout_below="@+id/bamboo_btn"
        android:layout_marginStart="21dp"
        android:layout_marginTop="28dp"
        android:text="@string/steampunk" />

    <Button
        android:id="@+id/alley_cat_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/steampunk_btn"
        android:layout_below="@+id/steampunk_btn"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/alleycat" />
</RelativeLayout>
