<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/dnd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/dnd_permission_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dnd_permission_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dnd_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/dnd_permission_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/allow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/dnd_title"
            android:layout_below="@+id/dnd_permission_text"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/round_blue_popup_btn"
            android:text="@string/allow"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />

        <Button
            android:id="@+id/deny_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/allow_btn"
            android:layout_alignBottom="@+id/allow_btn"
            android:layout_alignEnd="@+id/dnd_title"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/round_neutral_popup_btn"
            android:text="@string/deny"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>